packages/CodingStandard/DotBlue/tests/valid/FunctionSpacing.php
<?php

namespace Foo;


class Bar
{

	public function foo()
	{

	}



	public function bar()
	{

	}

}
