packages/CodingStandard/DotBlue/tests/invalid/UnusedPrivatePropertiesMagicMethods.php
<?php

class Coordinates
{

	private $x;

}
